[gd_scene load_steps=2 format=3 uid="uid://co63ch68l3d3e"]

[ext_resource type="Script" uid="uid://chhywfengqkr0" path="res://scenes/Buffs/buff_base.gd" id="1_6k8aw"]

[node name="BuffBase" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_6k8aw")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
